Fix icons alignment

--- a/styles/content.css
+++ b/styles/content.css
@@ -176,11 +176,14 @@ h1.animTitle {
     margin: 0;
     padding: 0;
     font: normal 16px Century Gothic;
+    width: 150px;
 }
 
 #iconTitle a {
     color: #7F6F58;
     font-size: 16px;
+    display: block;
+    text-align: center;
 }
 
 #iconTitle a:hover {
