--- a/styles/framework.css
+++ b/styles/framework.css
@@ -1,15 +1,6 @@
 .m0 { margin: 0; }
 .p0 { padding: 0; }
-.pl91 { padding-left: 91px; }
-.pl91 { padding-left: 91px; }
-.pl70 { padding-left: 70px; }
-.pl69 { padding-left: 69px; }
-.pl65 { padding-left: 65px; }
-
-.pl86 { padding-left: 86px; }
-.pl90 { padding-left: 90px; }
-.pl67 { padding-left: 67px; }
-.pl60 { padding-left: 60px; }
+.pl40 {padding-left: 40px;}
 
 .pt20 { padding-top: 20px; }
 .pt40 { padding-top: 40px; }
